# plover-hatchery

./: .gitignore  README.md  pyproject.toml  setup.cfg
benchmarks/: main.py
extension/: .gitignore  CHANGELOG.md  README.md  deno.json  main.ts  package-lock.json  package.json  vsc-extension-quickstart.md
extension/syntaxes/: hatchery.file.standalone.tmLanguage.yaml  hatchery.file.tmLanguage.yaml  (+3 more)
local-utils/: json_to_hatchery.py  maturin_dev.py  plover_debug.py  plover_install.py  unilex_to_hatchery.py
plover_hatchery/: HatcheryDictionary.py  HatcheryExtension.py  HatcheryWebServerExtension.py  Store.py  WriteoutsDictionary.py
plover_hatchery_lib_rs/: Cargo.toml  pyproject.toml
plover_hatchery_lib_rs/src/: lib.rs
plover_hatchery_lib_rs/src/definition/: iter.rs  mod.rs  py.rs
plover_hatchery_lib_rs/src/definition/cursor/: iter.rs  mod.rs  py.rs
plover_hatchery_lib_rs/src/definition/entity/: mod.rs  transclusion.rs
plover_hatchery_lib_rs/src/definition/entity/sopheme/: keysymbol.rs  mod.rs
plover_hatchery_lib_rs/src/definition/rawable/: mod.rs
plover_hatchery_lib_rs/src/defs/: def.rs  mod.rs  py.rs
plover_hatchery_lib_rs/src/defs/cursor/: iter.rs  mod.rs  py.rs
plover_hatchery_lib_rs/src/defs/def_items/: def.rs  entity.rs  keysymbol.rs  mod.rs  rawable.rs  sopheme.rs  transclusion.rs
plover_hatchery_lib_rs/src/defs/dict/: mod.rs  py.rs
plover_hatchery_lib_rs/src/defs/parse/: lex.rs  mod.rs  parse.rs  py.rs
plover_hatchery_lib_rs/src/defs/view/: mod.rs  py.rs
plover_hatchery_lib_rs/src/entity/: mod.rs  sopheme.rs
plover_hatchery_lib_rs/src/morphology/: affix.rs  mod.rs
plover_hatchery_lib_rs/src/pipes/: diphthongs.rs  map_def_items.rs  mod.rs  optionalize.rs  soph.rs
plover_hatchery_lib_rs/src/pipes/soph_trie/: add_entry.rs  mod.rs
plover_hatchery_lib_rs/src/trie/: mod.rs  nondeterministic_trie.rs  nondeterministictrie.rs  py.rs  transition.rs  transition_flag.rs  transition_flag_manager.rs  transition_source_node.rs
test/: test__match_ortho_steno.py  test__match_sophemes.py  test__parse_sopheme_seq.py  test__parse_sopheme_sequence.py
web/: package.json
(+156 files in other folders)
