[package]
name = "plover_hatchery_lib_rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plover_hatchery_lib_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
regex = "1.12.2"

[profile.release]
debug = true
lto = true
codegen-units = 1
